Add modifier key combination support and configure for local development
- Support hotkey combinations like Right Option + Right Shift for push-to-talk
- Add HotkeyCombination struct to hold multiple modifier keys
- New ModifierKeyPicker UI with popover for multi-select
- Releasing any key in combination stops recording
- Migrate existing single-key settings to new format automatically

Local dev setup:
- Update bundle identifier to me.zcs.VoiceInk
- Update development team
- Disable Sparkle auto-updates (code preserved)
- Disable licensing checks for local development
- Disable ENABLE_NATIVE_SPEECH_ANALYZER (requires macOS 26 SDK)

--- a/VoiceInk/VoiceInk.entitlements
+++ b/VoiceInk/VoiceInk.entitlements
@@ -23,7 +23,7 @@
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.prakashjoshipax.VoiceInk</string>
+		<string>$(AppIdentifierPrefix)me.zcs.VoiceInk</string>
 	</array>
 </dict>
 </plist>
